test/valid/Matrix/TestEmptyMatrix.plume
/**
 * A class to test the empty matrix
 *
 * @author Robin Burgess 36815
 */
 class TestEmptyMatrix extends Object is
  method main : () -> String is
    new EmptyMatrix().toString()
    
  method override toString : () -> String is
	"TestEmptyMatrix"